# wgpucraft

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/shaders/: shader.wgsl
src/: engine.rs  launcher.rs  lib.rs  main.rs  window.rs
src/ecs/: mod.rs
src/render/: atlas.rs  binding.rs  buffer.rs  consts.rs  mesh.rs  mod.rs  model.rs  renderer.rs  texture.rs
src/render/pipelines/: mod.rs  terrain.rs
src/scene/: camera.rs  mod.rs  player.rs  world.rs
src/scene/terrain/: biomes.rs  block.rs  chunk.rs  mod.rs  noise.rs
src/scene/world/: block.rs
src/world/: mod.rs
