[package]
name = "wgpucraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
env_logger = "0.10.1"
tokio = { version = "1.35.1", default-features = false, features = ["rt"] }
winit = { version = "0.29.8", features = ["rwh_05"]}
bytemuck = { version = "1.14", features = [ "derive" ] }


