[package]
name = "wgpucraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
env_logger = "0.10.1"
tokio = { version = "1.35.1", default-features = false, features = ["rt"] }
winit = { version = "0.29.8", features = ["rwh_05"]}
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0.79"
clap = "4.5.1"
instant = "0.1" #because std::time::Instant panics on WASM
bevy_ecs = "0.13.0"
rayon = "1.5"
block-mesh = "0.2.0"
noise = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.79"
fs_extra = "1.3.0"
glob = "0.3.1"
 

